--- a/biblioteca-prof.html
+++ b/biblioteca-prof.html
@@ -5,7 +5,7 @@
 		<title>Genêro Biblioteca do Professor</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
