--- a/contos.html
+++ b/contos.html
@@ -5,7 +5,7 @@
 		<title>Genêro Contos, Versos e Afins</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
