--- a/culturas.html
+++ b/culturas.html
@@ -5,7 +5,7 @@
 		<title>Genêro Cultura Afro; Folclore; Indígena</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
