--- a/ficçao.html
+++ b/ficçao.html
@@ -5,7 +5,7 @@
 		<title>Genêro Ficção</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
