--- a/historia-pr.html
+++ b/historia-pr.html
@@ -5,7 +5,7 @@
 		<title>Genêro História do Paraná</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
