--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Biblioteca</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -23,6 +23,7 @@
 					<p>Pesquisar livros que tenham na biblioteca de sua escola e empresta-los online.</p>
 					<p>Facilitar para os alunos a pesquisa do livro escolhido.</p>
 					<p>Todos os livros estão separados seguindo o catálogo da biblioteca física.</p>
+					<p>Essa biblioteca é referente a biblioteca da Escola Estadual Cívico-Milita Dr. João da Rocha Chueiri - Ribeirão Claro PR</p>
 				</div>
 			</section>
 
