--- a/literatura-b.html
+++ b/literatura-b.html
@@ -5,7 +5,7 @@
 		<title>Genêro Literatura Brasileira</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
