--- a/rib-claro.html
+++ b/rib-claro.html
@@ -5,7 +5,7 @@
 		<title>Genêro Ribeirão Claro</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="biblioteca.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
